[package]
name = "kurublox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.52"
toml = "0.8.13"
serde = {version = "1.0.203", features = ["derive"]}
fs_extra = "1.3.0"
minreq = { version = "2.11.2", features = ["json-using-serde", "https-native"] }
serde_json = "1.0"